--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>H</title>
 	<link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/3/31/Logo_du_Commandement_de_l%27Espace.svg">
-	<link rel="stylesheet" href="/Documents/site.css" type="text/css">
+	<link rel="stylesheet" href="site.css" type="text/css">
 </head>
 	<body>
 		me
