--- a/index.html
+++ b/index.html
@@ -5,7 +5,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>H</title>
 	<link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/3/31/Logo_du_Commandement_de_l%27Espace.svg">
-	<link rel="stylesheet" href="styles.css">
+	<style>	
+		body {
+    		background-color: lightblue;
+  		}
+  
+  		h1 {
+    		color: white;
+    		text-align: center;
+  		}
+  
+  		p {
+    		font-family: verdana;
+    		font-size: 20px;
+    		text-align: center;
+  		}
+	</style>
 </head>
 	<body>
 		me
